absolutely gross scrollbar fix for tape-field

--- a/styles/tm.css
+++ b/styles/tm.css
@@ -52,12 +52,17 @@ body {
   margin: 0px;
 }
 
+.tape-field-wrapper {
+  height: 30px;
+  overflow: hidden;
+  border-radius: 3px;
+}
+
 .tape-field {
   background-color: rgba(0, 0, 0, 0.6);
-  border-radius: 3px;
   border: none;
   width: auto;
-  height: 30px;
+  height: 60px;
   overflow-x: scroll;
   white-space:nowrap;
 }
